[package]
name = "linurgy"
version = "0.3.0"
authors = ["Christopher Morton <sonro@gmx.com>"]
edition = "2018"
description = """
Manipulate the output of multiple newlines.
Replace/Insert/Append newlines with any string.
Input and output from stdio/files/buffers.
"""
repository = "https://github.com/sonro/linurgy"
license = "MIT"
readme = "README.md"
keywords = ["line", "newline", "text-editing", "stream-editing"]
categories = ["parsing"]

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "sonro/linurgy", branch = "master" }
