[package]
name = "linurgy"
version = "0.5.0"
authors = ["Christopher Morton <sonro@gmx.com>"]
edition = "2018"
description = """
Manipulate the output of multiple newlines.
Replace/Insert/Append newlines with text.
Input and output from stdio/files/buffers.
"""
repository = "https://github.com/sonro/linurgy"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["line", "newline", "text", "stream", "ending"]
categories = ["text-processing"]
